Fix header overflowing, final commit before submission

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -210,7 +210,7 @@ a.morelink {
 
 /* --------------------------------------------------------------- HOME PAGE */
 .home-header {
-    margin-top: 60px;
+    margin-top: 100px;
     margin-bottom: 30px;
     color: #fafafa;
     text-shadow: 4px -4px #418a7b;
